# iss-rl

./: .gitignore  README.md  main.py  preprocessing.py  pyproject.toml  utils.py
custom_integrations/InternationalSuperstarSoccerDeluxe-Snes/: BrazilArgentina.state  data.json  metadata.json  rom.sha  scenario.json
video/: openaigym.episode_batch.0.12892.stats.json  openaigym.manifest.0.12892.manifest.json  openaigym.video.0.12892.video000000.meta.json
